--- a/_posts/2025-02-01-2025_predictions.md
+++ b/_posts/2025-02-01-2025_predictions.md
@@ -106,6 +106,8 @@ These predictions are what I would consider 'within the realm of possibility', b
 
 > **Artemis II succeeds primary mission objectives, but is delayed**
 
+> **Germany leaves the EU**
+
 # Meta Notes on Predictions
 
 I took major inspiration from [hypertextgarden's](https://hypertextgarden.com/p/2025-predictions-thread-part-1) blog post on making predictions for 2025. While it may seem that her predictions are the 'meat' of the blog post, looking back, *making predictions* is difficult enough as it is, which is why I want to spend some time on several epiphany moments I had.
