--- a/_posts/2025-09-4-captcha.md
+++ b/_posts/2025-09-4-captcha.md
@@ -4,6 +4,7 @@ date: 2025-09-04
 categories: [Machine Learning, Cybersecurity]
 tags: [AI, CAPTCHA, Stable Diffusion, ControlNet, QR Codes]
 description: Using Stable Diffusion and ControlNet to create a new CAPTCHA design that human readable, but not AI readable.
+featured_image: assets/media/next_gen_captcha/samples/9.webp
 ---
 
 ## CAPTCHAs
